@@ -1,3 +1,11 @@
+2004-10-05  Anders Carlsson  <andersca@gnome.org>
+
+	* glib/goption.c: (g_option_context_parse):
+	Add check for if argc is 0.
+	
+	* tests/option-test.c: (empty_test3), (main):
+	Add test case.
+	
 2004-10-05  Matthias Clasen  <mclasen@redhat.com>
 
 	* NEWS: Update
